@@ -4,6 +4,7 @@
 - Evaluation
 - Add to favourites
 - Ability to watch evaluated AMV
+- Ability to watch favourite AMV
 
 ## [1.2.0] - 2017-03-02
 ### Added
